--- a/index.html
+++ b/index.html
@@ -15,14 +15,153 @@
     />
     <link rel="stylesheet" href="./node_modules/chart.js/dist/Chart.css" />
 
+    <!-- My CSS -->
+    <link rel="stylesheet" href="./src/css/fonts.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
+
     <title>Presentasi Penyebaran Virus COVID-19 | IPS Kelas 8</title>
   </head>
   <body>
-    <main role="main"></main>
+    <main role="main">
+      <article id="webslides">
+        <section>
+          <div class="wrap">
+            <div class="content-top">
+              <h1 class="text-landing">
+                Presentasi IPS COVID-19
+              </h1>
+            </div>
+          </div>
+          <footer class="bg-white">
+            <div class="wrap">
+              <p>
+                <span class="alignleft ubuntu">Ezra Khairan Permana</span>
+                <span class="alignright">
+                  <a
+                    href="https://github.com/EzraKhairanPermana/presentasi-corona-ips-85"
+                    ><i class="fab fa-github"></i
+                  ></a>
+                  <a href="https://instagram.com/ezra.khairan"
+                    ><i class="fab fa-instagram"></i></a
+                ></span>
+              </p>
+            </div>
+          </footer>
+        </section>
+        <section class="bg-green">
+          <div class="wrap slideInRight osans">
+            <h4 class="osans-bold">Dibuat Oleh</h4>
+            <p>Ezra Khairan Permana</p>
+          </div>
+          <footer>
+            <div class="wrap fadeInUp">
+              <p>
+                <span class="alignleft">85</span>
+                <span class="alignright">09</span>
+              </p>
+            </div>
+          </footer>
+        </section>
+        <section class="bg-black">
+          <span
+            class="background dark"
+            style="background-image: url('./src/img/corona.jpeg');"
+          ></span>
+          <div class="wrap zoomIn">
+            <div class="content-center">
+              <h4 class="osans">Apa itu Virus COVID-19 ?</h4>
+              <h5 class="ubuntu-lighter">
+                Dan Bagaimana Penyebarannya ?
+              </h5>
+            </div>
+          </div>
+        </section>
+        <section class="slideInRight">
+          <div class="wrap size-50">
+            <h3 class="osans">Indeks Halaman</h3>
+            <hr />
+            <div class="toc">
+              <ol>
+                <li>
+                  <a href="#slide=5">
+                    <span class="chapter">Apa itu Corona ?</span>
+                    <span class="toc-page">5</span>
+                  </a>
+                </li>
+              </ol>
+            </div>
+          </div>
+        </section>
+        <section class="bg-black">
+          <div class="wrap">
+            <div class="content-center zoomIn">
+              <h1 class="ubuntu">Apa itu Corona ?</h1>
+            </div>
+          </div>
+        </section>
+        <section class="bg-black">
+          <div class="wrap">
+            <div class="grid">
+              <div class="column">
+                <h3 class="osans-bold aligncenter slideInRight">Corona</h3>
+                <hr style="background-color: white;" />
+                <p class="osans-lighter fadeInUp">
+                  <code>Coronavirus</code> atau <code>Sars-CoV2</code> adalah
+                  Penyakit infeksi saluran pernapasan yang awal gejalanya flu,
+                  sampai seperti
+                  <code>Middle East Respiratory Syndrome (MERS)</code> dan
+                  <code>Severe Acute Respiratory Syndrome (SARS)</code> yang
+                  awal penyebarannya diawali di Kota Wuhan, China.
+                </p>
+              </div>
+              <div class="column ubuntu">
+                <h3 class="ubuntu-bold aligncenter slideInRight">
+                  Penamaan
+                </h3>
+                <hr style="background-color: white;" />
+                <ol class="fadeInUp">
+                  <li>
+                    Severe Acute Respiratory Syndrome Coronavirus 2 (SARC-CoV2)
+                  </li>
+                  <li>Coronavirus-Disease-2019 (COVID-19)</li>
+                </ol>
+              </div>
+              <div class="column roboto">
+                <h3 class="roboto-bold aligncenter slideInRight">Gejala</h3>
+                <hr style="background-color: white;" />
+                <ol class="fadeInUp">
+                  <li>Demam >38&deg;C</li>
+                  <li>Kelelahan / Lemas</li>
+                  <li>Batuk tidak Berdahak</li>
+                  <li>Pegal-Pegal</li>
+                  <li>Tidak Nafsu Makan</li>
+                </ol>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section>
+          <div class="wrap">
+            <div class="content-center">
+              <h3 class="roboto-bold">Indonesia ?</h3>
+              <p class="osans">Sudah berapa banyak terjangkit ?</p>
+            </div>
+          </div>
+        </section>
+        <section>
+          <div class="wrap">
+            <div class="loader content-center" id="bar"></div>
+            <canvas id="barProvinsi"></canvas>
+          </div>
+        </section>
+      </article>
+    </main>
 
     <!-- JS::Organ -->
-    <script src="./node_modules/webslides/static/js/webslides.js"></script>
+    <script src="./node_modules/webslides/static/js/webslides.min.js"></script>
     <script src="./node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
     <script src="./node_modules/chart.js/dist/Chart.js"></script>
+    <!-- JS::Core -->
+    <script src="./src/js/script.js"></script>
   </body>
 </html>
