Menambah bagan pie dan menambahkan nama container

--- a/index.html
+++ b/index.html
@@ -149,9 +149,15 @@
           </div>
         </section>
         <section>
-          <div class="wrap">
+          <div class="wrap" id="barContainer">
             <div class="loader content-center" id="bar"></div>
             <canvas id="barProvinsi"></canvas>
+          </div>
+        </section>
+        <section>
+          <div class="wrap" id="pieContainer">
+            <div class="loader content-center" id="pie"></div>
+            <canvas id="pieIndonesia"></canvas>
           </div>
         </section>
       </article>
