--- a/index.html
+++ b/index.html
@@ -88,6 +88,20 @@
                     <span class="toc-page">5</span>
                   </a>
                 </li>
+                <li>
+                  <a href="#slide=7">
+                    <span class="chapter">Bagaimana dengan Indonesia ?</span>
+                    <span class="toc-page">7</span>
+                  </a>
+                  <ol>
+                    <li>
+                      <a href="#slide=8">
+                        <span class="chapter">Jumlah Posiftif Di Berbagai Daerah</span>
+                        <span class="toc-page">8</span>
+                      </a>
+                    </li>
+                  </ol>
+                </li>
               </ol>
             </div>
           </div>
@@ -140,7 +154,7 @@
             </div>
           </div>
         </section>
-        <section>
+        <section class="bg-primary">
           <div class="wrap">
             <div class="content-center">
               <h3 class="roboto-bold">Indonesia ?</h3>
@@ -148,16 +162,43 @@
             </div>
           </div>
         </section>
-        <section>
+        <section class="zoomIn">
           <div class="wrap" id="barContainer">
             <div class="loader content-center" id="bar"></div>
             <canvas id="barProvinsi"></canvas>
           </div>
         </section>
-        <section>
+        <section class="slideInLeft">
           <div class="wrap" id="pieContainer">
             <div class="loader content-center" id="pie"></div>
-            <canvas id="pieIndonesia"></canvas>
+            <canvas class="content-left" id="pieIndonesia"></canvas>
+          </div>
+        </section>
+        <section class="bg-primary">
+          <div class="wrap">
+            <div class="content-center fadeInUp" id="angkaCorona">
+              <div class="loader aligncenter"></div>
+            </div>
+          </div>
+        </section>
+        <section class="bg-red">
+          <div class="wrap">
+            <div class="content-center">
+              <h2 class="roboto">Bagaimana Penyebarannya </h1>
+              <h4 class="roboto">Di Kawasan Asia Tenggara ?</h2>
+            </div>
+          </div>
+        </section>
+        <section>
+          <div class="wrap">
+            <div class="card-50 bg-white">
+              <img src="./src/img/pesebaran-corona.jpg" class="slideInLeft" alt="Gambar Penyebaran Corona" />
+                <div class="flex-content slideInRight bg-black">
+                  <h3 class="osans">Kronologi Penyebaran</h3>
+                  <hr>
+                  <p>Pada awalnya, virus corona muncul di Kota <b>Wuhan</b>, China. Pada akhirnya menyebar keseluruh dunia dan oleh WHO (Organisasi Kesehatan Dunia) sebagai <a target="_blank" href="https://id.wikipedia.org/wiki/Pandemi">Pandemi</a>.</p>
+                </div>
+              </div>
           </div>
         </section>
       </article>
