Slide Baru - Indonesia

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
           </footer>
         </section>
-        <section class="slideInRight">
+        <section class="slideInLeft">
           <div class="wrap size-50">
             <h3 class="osans">Indeks Halaman</h3>
             <hr />
@@ -97,23 +97,23 @@
                   </ol>
                 </li>
                 <li>
-                  <a>
+                  <a href="#slide=10">
                     <span class="chapter"
-                      >Penyebaran di Kawasan Asia Tenggara</span
+                      >Penyebaran COVID-19 di Kawasan Asia Tenggara</span
                     >
-                    <span class="toc-page"></span>
+                    <span class="toc-page">10</span>
                   </a>
                 </li>
               </ol>
             </div>
           </div>
         </section>
-        <section class="bg-black">
+        <section class="bg-black zoomIn">
           <span
             class="background dark"
             style="background-image: url('./src/img/corona.jpeg');"
           ></span>
-          <div class="wrap zoomIn">
+          <div class="wrap">
             <div class="content-center">
               <h4 class="osans">Apa itu Virus COVID-19 ?</h4>
               <h5 class="ubuntu-lighter">
@@ -226,7 +226,7 @@
                     target="_blank"
                     href="https://id.wikipedia.org/wiki/Pandemi"
                     >Pandemi</a
-                  >. Pada saat Wuhan merebaknya virus corona, terjadi yaitu
+                  >. Pada saat Wuhan merebak virus corona, terjadi yaitu
                   <code>Tahun Baru China</code> dimana puncak perpindahan rakyat
                   China.
                 </p>
@@ -244,7 +244,9 @@
                 Pertama kali kasus corona di Indonesia dibawa oleh orang dari
                 Jepang yang sebelumnya berada di Malaysia. Orang Jepang itu
                 terpapar Corona sejak tanggal 27 Februari 2020. Presiden Jokowi
-                sendiri yang mengumumkan pasien positif corona.
+                sendiri yang mengumumkan pasien positif corona. Orang yang
+                terjangkit merupakan Ibu dan anaknya, mereka dibawa ke RSPI
+                Sulianti Saroso untuk diisolasi.
               </p>
             </div>
           </div>
@@ -259,6 +261,26 @@
               </a>
             </div>
           </footer>
+        </section>
+        <section class="bg-black slide-top slideInLeft">
+          <div class="wrap">
+            <div class="content-center">
+              <h4 class="osans">Indonesia dikelilingi Negara Terinfeksi</h4>
+              <h4 class="ubuntu">COVID-19</h4>
+              <hr
+                style="background-color: white; width: 75%; text-align: center;"
+              />
+              <p class="roboto">
+                Dibandingkan dengan Negara-Negara ASEAN, Indonesia termasuk baru
+                yang terinfeksi COVID-19. Sebelum Indonesia terjangkiti oleh
+                virus Corona, Malaysia dan Singapura sudah terinfeksi terlebih
+                dahulu. Sampai saat ini, Vaksin COVID-19 masih belum ditemukan.
+                Corona ini merupakan penyakit
+                <code>Self Limiting Disease</code> atau penyakit yang bisa
+                sembuh sendirinya dengan cara meningkatkan imunitas tubuh.
+              </p>
+            </div>
+          </div>
         </section>
       </article>
     </main>
