--- a/index.html
+++ b/index.html
@@ -282,6 +282,46 @@
             </div>
           </div>
         </section>
+        <section class="bg-primary">
+          <div class="wrap">
+            <div class="content-left">
+              <h2>Pencegahannya</h2>
+              <ol>
+                <li>Cuci tangan</li>
+                <li>Hindari Keramaian (Jika bisa di rumah saja)</li>
+                <li>Gunakan masker bila keluar rumah</li>
+                <li>Masak daging sampai matang</li>
+                <li>Hindari kontak dengan hewan liar</li>
+                <li>Tutup mulut dan hidung ketika bersin</li>
+              </ol>
+            </div>
+          </div>
+        </section>
+        <section>
+          <div class="wrap">
+            <div class="content-center">
+              <blockquote class="text-quote">
+                <p>
+                  "Kami berjuang di sini untuk kalian. Kalian di dirumah untuk
+                  kami. Kita berjuang <b>Sama-Sama!</b>"
+                </p>
+              </blockquote>
+              <p>~ <i>Pejuang Garda Depan</i> | #<b>diRumahAja</b></p>
+            </div>
+          </div>
+        </section>
+        <section class="slide-bottom">
+          <div class="wrap">
+            <div class="content-right">
+              <h2>Terima Kasih</h2>
+              <p>
+                Terima kasih telah membaca, semoga pandemi virus corona cepat
+                berakhir. Ayo kita bantu para pejuang medis dengan #diRumahAja.
+                Tetap jaga kebersihan dan sampai jumpa.
+              </p>
+            </div>
+          </div>
+        </section>
       </article>
     </main>
 
