Memperbaiki gambar yang tidak muncul

--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
         <section class="bg-black zoomIn">
           <span
             class="background dark"
-            style="background-image: url('./img/corona.jpeg')"
+            id="span-corona"
           ></span>
           <div class="wrap">
             <div class="content-center">
