Menambahkan purgecss dan memperbaiki css untuk icon

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
                   class="btn-fullscreen"
                   style="border: none; background-color: #f7f9fb"
                 >
-                  <i class="icon-expand" style="cursor: pointer"></i>
+                  <i class="icon icon-expand" style="cursor: pointer"></i>
                 </button>
               </div>
             </div>
@@ -37,12 +37,12 @@
                   <a
                     href="https://github.com/EzraKhairanPermana/presentasi-corona-ips-85"
                     rel="noopener noreferrer"
-                    ><i class="icon-github"></i
+                    ><i class="icon icon-github"></i
                   ></a>
                   <a
                     href="https://instagram.com/ezra.khairan"
                     rel="noopener noreferrer"
-                    ><i class="icon-instagram"></i></a
+                    ><i class="icon icon-instagram"></i></a
                 ></span>
               </p>
             </div>
@@ -109,10 +109,7 @@
           </div>
         </section>
         <section class="bg-black zoomIn">
-          <span
-            class="background dark"
-            id="span-corona"
-          ></span>
+          <span class="background dark" id="span-corona"></span>
           <div class="wrap">
             <div class="content-center">
               <h4 class="osans">Apa itu Virus COVID-19 ?</h4>
