Menambahkan loader dan google font

--- a/src/index.html
+++ b/src/index.html
@@ -166,20 +166,20 @@
         </section>
         <section class="zoomIn">
           <div class="wrap" id="barContainer">
-            <div class="loader content-center" id="bar"></div>
+            <div class="loader" id="bar"></div>
             <canvas id="barProvinsi"></canvas>
           </div>
         </section>
         <section class="slideInLeft">
           <div class="wrap" id="pieContainer">
-            <div class="loader content-center" id="pie"></div>
+            <div class="loader" id="pie"></div>
             <canvas class="content-left" id="pieIndonesia"></canvas>
           </div>
         </section>
         <section class="bg-primary">
           <div class="wrap">
             <div class="content-center fadeInUp" id="angkaCorona">
-              <div class="loader aligncenter"></div>
+              <div class="loader"></div>
             </div>
           </div>
         </section>
