Mengubah rel stylesheet menjadi preload

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="preload" as="font" href="icomoon.ttf" crossorigin="anonymous">
+    <link rel="preload" as="font" href="icomoon.ttf" crossorigin="anonymous" />
     <link rel="preconnect" href="https://apicovid19indonesia-v2.vercel.app" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
     <link
+      rel="preload"
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&family=Ubuntu&display=swap"
-      rel="stylesheet"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
 
     <title>Presentasi Penyebaran Virus COVID-19 | IPS Kelas 8</title>
