--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="preload" as="font" href="icomoon.ttf" crossorigin="anonymous" />
     <link rel="preconnect" href="https://apicovid19indonesia-v2.vercel.app" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
@@ -205,7 +204,7 @@
             <div class="card-50 bg-white">
               <figure>
                 <img
-                  src="./img/pesebaran-corona.jpg"
+                  data-src="pesebaran-corona.jpg"
                   alt="Gambar Penyebaran Corona"
                 />
                 <figcaption>
